Update labels to run instances on linux nodes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       placement:
         constraints:
           - "node.role==manager"
+          - "node.labels.os==linux"
       rollback_config:
         parallelism: 0
         failure_action: continue
