--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       placement:
         constraints:
           - "node.role==manager"
-          - "node.labels.os==linux"
+          - "node.platform.os==linux"
       rollback_config:
         parallelism: 0
         failure_action: continue
